# rdkafka2

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  Untitled  build.rs
.dev/: docker-compose.yml  ssl_init.sh
.dev/kafka/: log4j.properties
.dev/kafka/oauthbearer/: server.properties
.dev/kafka/scram/: jaas.conf  scram_init.sh  server.properties
.github/workflows/: build.yml  fmt.yml  install-cargo-make.yml  main.yml  test.yml
examples/admin/: main.rs
examples/admin/config/: oauthbearer.json  scram.json
src/: _client.rs  _config.rs  _lib.rs  client.rs  config.rs  error.rs  lib.rs  log.rs  message.rs  partitions.rs  ptr.rs  time.rs  topic.rs  topic_partition_list.rs  util.rs
src/client/: admin.rs  builder.rs  builders.rs  mod.rs  native.rs
src/client/admin/: acls.rs  cluster.rs  consumer_groups.rs  mod.rs  partitions.rs  topics.rs
src/consumers/: mod.rs  stream.rs
src/producer/: boxed.rs  builder.rs  mod.rs
tests/: admin.rs  common.rs  docker-compose.yml  producer.rs  rust.supp
tests/scripts/: e2e_tests.sh  e2e_tests_valgrind_check.sh
tests/suppressions/: admin.demangled.supp  admin.supp  producer.demangled.supp  producer.supp
