[package]
name = "rdkafka2"
version = "0.0.0"
repository = "https://github.com/amountainram/rdkafka2"
license = "MIT"
keywords = ["kafka", "rdkafka"]
description = "Rust wrapper for librdkafka"
categories = ["api-bindings"]
edition = "2024"
rust-version = "1.85"
include = ["/src", "LICENSE", "LICENSE-librdkafka", "NOTICE"]

[features]
default = ["libz", "cmake-build", "tokio"]
tokio = ["tokio/macros", "tokio/rt", "dep:tokio-stream"]
tracing = ["dep:tracing"]
cmake-build = ["rdkafka2-sys/cmake-build"]
dynamic-linking = ["rdkafka2-sys/dynamic-linking"]
ssl = ["rdkafka2-sys/ssl"]
ssl-vendored = ["rdkafka2-sys/ssl-vendored"]
gssapi = ["rdkafka2-sys/gssapi"]
gssapi-vendored = ["rdkafka2-sys/gssapi-vendored"]
sasl = ["rdkafka2-sys/gssapi"]
libz = ["rdkafka2-sys/libz"]
libz-static = ["rdkafka2-sys/libz-static"]
curl = ["rdkafka2-sys/curl"]
curl-static = ["rdkafka2-sys/curl-static"]
zstd = ["rdkafka2-sys/zstd"]
zstd-pkg-config = ["rdkafka2-sys/zstd-pkg-config"]
external-lz4 = ["rdkafka2-sys/external-lz4"]

[dependencies]
futures = "0.3"
libc = "0.2"
log = "0.4"
num_enum = "0.7"
once_cell = "1"
rdkafka2-sys = "0.1.0"
slab = "0.4"
tokio = { version = "1", features = ["sync", "time"] }
tokio-stream = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }
typed-builder = "0.21"

[dev-dependencies]
env_logger = "0.11.8"
rand = "0.9.0"
rstest = "0.25.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.17"
