[package]
name = "rdkafka2"
version = "0.0.1"
repository = "https://github.com/amountainram/rdkafka2"
license = "MIT"
keywords = ["kafka", "rdkafka"]
description = "Rust wrapper for librdkafka"
categories = ["api-bindings"]
edition = "2024"
rust-version = "1.85"
include = ["/src", "LICENSE", "LICENSE-librdkafka", "NOTICE"]

[features]
default = ["libz", "cmake-build", "tokio", "serde"]
serde = ["dep:serde"]
tokio = ["tokio/macros", "tokio/rt", "dep:tokio-stream"]
tracing = ["dep:tracing"]
cmake-build = ["rdkafka2-sys/cmake-build"]
dynamic-linking = ["rdkafka2-sys/dynamic-linking"]
ssl = ["rdkafka2-sys/ssl"]
ssl-vendored = ["rdkafka2-sys/ssl-vendored"]
gssapi = ["rdkafka2-sys/gssapi"]
gssapi-vendored = ["rdkafka2-sys/gssapi-vendored"]
sasl = ["rdkafka2-sys/gssapi"]
libz = ["rdkafka2-sys/libz"]
libz-static = ["rdkafka2-sys/libz-static"]
curl = ["rdkafka2-sys/curl"]
curl-static = ["rdkafka2-sys/curl-static"]
zstd = ["rdkafka2-sys/zstd"]
zstd-pkg-config = ["rdkafka2-sys/zstd-pkg-config"]
external-lz4 = ["rdkafka2-sys/external-lz4"]

[dependencies]
futures = "0.3"
libc = "0.2"
log = "0.4"
once_cell = "1"
rdkafka2-sys = "0.1"
serde = { version = "1", optional = true, features = ["derive"] }
tokio = { version = "1", features = ["sync", "time"] }
tokio-stream = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }
typed-builder = "0.21"

[dev-dependencies]
backon = "1.5.1"
env_logger = "0.11.8"
rand = "0.9.1"
rstest = "0.26.1"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.17"

[build-dependencies]
cargo_metadata = "0.20.0"

[package.metadata.release]
pre-release-hook = [
    "git",
    "cliff",
    "-o",
    "CHANGELOG.md",
    "--bump",
    "--tag",
    "v{{version}}",
    "--tag-pattern",
    "v[0-9]+\\.[0-9]+\\.[0-9]+$",
]
pre-release-commit-message = "'rdkafka2' tagged to version '{{version}}'"
push = false
publish = false
tag-message = "'rdkafka2' tag '{{version}}'"
tag-name = "v{{version}}"
